084_expr2/grade.txt
Grading at 10/30/2022:20:47:04.414213
For commit ID 7cad7b0a7f9a3e1e85a2b2a7f90c17902ab51f50
Grading at Sun Oct 30 04:47:04 PM EDT 2022
Compiling code
expr.cpp: In function ‘Expression* makeExpr(char, Expression*, Expression*)’:
expr.cpp:22:42: error: cannot convert ‘MinusExpression*’ to ‘Expression*’ in return
   22 |       return new MinusExpression(lhs, rhs);
      |                                          ^
expr.cpp:24:42: error: cannot convert ‘TimesExpression*’ to ‘Expression*’ in return
   24 |       return new TimesExpression(lhs, rhs);
      |                                          ^
expr.cpp:26:40: error: cannot convert ‘DivExpression*’ to ‘Expression*’ in return
   26 |       return new DivExpression(lhs, rhs);
      |                                        ^
The code did not compile.

Overall Grade: F
